--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,10 +34,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-core:17.4.3'
 
     //Base de datos
+    implementation 'com.google.firebase:firebase-database:19.3.0'
 
     //Autenticación
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
 
     //Análisis de la app con firebase
     implementation 'com.google.firebase:firebase-analytics:17.4.3'
