--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-core:17.4.3'
+    implementation 'com.github.msayan:tutorial-view:v1.0.10'
 
     //Base de datos
     implementation 'com.google.firebase:firebase-database:19.3.0'
