--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-core:17.4.3'
     implementation 'com.github.msayan:tutorial-view:v1.0.10'
+    implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.2.0'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.70'
 
     //Base de datos
     implementation 'com.google.firebase:firebase-database:19.3.0'
