--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,18 +34,23 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.firebase:firebase-core:17.4.3'
     implementation 'com.github.msayan:tutorial-view:v1.0.10'
     implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.2.0'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.70'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    
+    //Guardar las imagenes
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
 
     //Base de datos
     implementation 'com.google.firebase:firebase-database:19.3.0'
+    implementation 'com.firebaseui:firebase-ui-database:0.4.0'
 
     //Autenticación
     implementation 'com.google.firebase:firebase-auth:19.3.1'
 
     //Análisis de la app con firebase
+    implementation 'com.google.firebase:firebase-core:17.4.3'
     implementation 'com.google.firebase:firebase-analytics:17.4.3'
 
     //Mapa
