--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,16 +38,24 @@ dependencies {
     implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.2.0'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.70'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    // FirebaseUI for Firebase Realtime Database
+    implementation 'com.firebaseui:firebase-ui-database:6.2.1'
+
+    // FirebaseUI for Cloud Firestore
+    implementation 'com.firebaseui:firebase-ui-firestore:6.2.1'
     
     //Guardar las imagenes
     implementation 'com.google.firebase:firebase-storage:19.1.1'
+    implementation 'com.firebaseui:firebase-ui-storage:6.2.1'
 
     //Base de datos
     implementation 'com.google.firebase:firebase-database:19.3.0'
-    implementation 'com.firebaseui:firebase-ui-database:0.4.0'
+    //implementation 'com.firebaseui:firebase-ui-database:0.4.0'
 
     //Autenticación
     implementation 'com.google.firebase:firebase-auth:19.3.1'
+    implementation 'com.firebaseui:firebase-ui-auth:6.2.1'
 
     //Análisis de la app con firebase
     implementation 'com.google.firebase:firebase-core:17.4.3'
