--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.2.0'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.70'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.github.jd-alexander:LikeButton:0.2.3'
 
     // FirebaseUI for Firebase Realtime Database
     implementation 'com.firebaseui:firebase-ui-database:6.2.1'
