--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,6 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-        multiDexEnabled = true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
@@ -40,7 +39,7 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.70'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.github.jd-alexander:LikeButton:0.2.3'
-    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.android.volley:volley:1.1.0'
 
     // FirebaseUI for Firebase Realtime Database
     implementation 'com.firebaseui:firebase-ui-database:6.2.1'
